--- a/frontend/src/components/deck/deck.module.css
+++ b/frontend/src/components/deck/deck.module.css
@@ -1,3 +1,12 @@
+.section {
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%), #0a863e;
+  @apply h-screen;
+}
+
 .header {
-  @apply flex flex-col text-white bg-slate-700 h-screen align-middle justify-center text-lg;
+  @apply flex align-middle justify-center md:space-x-20 space-x-5 md:pt-[90px] pt-[50px];
+}
+
+.footer {
+  @apply md:p-[60px] p-[50px];
 }
