--- a/frontend/src/components/card-group/card-group.module.css
+++ b/frontend/src/components/card-group/card-group.module.css
@@ -2,11 +2,26 @@
   @apply flex xl:space-x-12 content-between justify-center flex-wrap xl:flex-nowrap;
 }
 
-.curved-5 {
-  @apply xl:[&:nth-child(1)]:rotate-15 [&:nth-child(1)]:-animate-popup-2;
-  @apply xl:[&:nth-child(2)]:rotate-7.5 xl:[&:nth-child(2)]:translate-y-12 [&:nth-child(2)]:-animate-popup-1;
-  @apply xl:[&:nth-child(3)]:translate-y-16 [&:nth-child(3)]:animate-popup;
-  @apply xl:[&:nth-child(4)]:-rotate-7.5 xl:[&:nth-child(4)]:translate-y-12 [&:nth-child(4)]:animate-popup-1;
-  @apply xl:[&:nth-child(5)]:-rotate-15 [&:nth-child(5)]:animate-popup-2;
+.card {
   @apply m-5 xl:m-0;
+}
+
+.-curved-2 {
+  @apply xl:rotate-15 -animate-popup-2;
+}
+
+.-curved-1 {
+  @apply xl:rotate-7.5 xl:translate-y-12 -animate-popup-1;
+}
+
+.curved {
+  @apply xl:translate-y-16 animate-popup;
+}
+
+.curved-1 {
+  @apply xl:-rotate-7.5 translate-y-12 animate-popup-1;
+}
+
+.curved-2 {
+  @apply xl:-rotate-15 animate-popup-2;
 }
