fix<frontend>: fix bug in card-group styles

--- a/frontend/src/components/card-group/card-group.module.css
+++ b/frontend/src/components/card-group/card-group.module.css
@@ -19,7 +19,7 @@
 }
 
 .curved-1 {
-  @apply xl:-rotate-7.5 translate-y-12 animate-popup-1;
+  @apply xl:-rotate-7.5 xl:translate-y-12 animate-popup-1;
 }
 
 .curved-2 {
