--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -1,3 +1,4 @@
 .body {
-  @apply text-center;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%), #0a863e;
+  @apply text-center h-screen;
 }
