--- a/frontend/src/components/deck/deck.module.css
+++ b/frontend/src/components/deck/deck.module.css
@@ -1,9 +1,9 @@
 .section {
-  @apply flex flex-col h-screen;
+  @apply flex flex-col grow;
 }
 
 .header {
-  @apply flex align-middle justify-center xl:space-x-20 space-x-5 xl:pt-[90px] pt-[50px];
+  @apply flex align-middle justify-center xl:space-x-20 space-x-5 xl:pt-[90px] sm:pt-[50px] pt-5;
 }
 
 .main {
