--- a/frontend/src/components/card-group/card-group.module.css
+++ b/frontend/src/components/card-group/card-group.module.css
@@ -1,9 +1,9 @@
 .group {
-  @apply flex xl:space-x-12 content-between justify-center flex-wrap xl:flex-nowrap;
+  @apply flex xl:space-x-12 content-between justify-center flex-wrap xl:flex-nowrap xl:p-28;
 }
 
 .card {
-  @apply m-5 xl:m-0;
+  @apply m-2 sm:m-5 xl:m-0;
 }
 
 .-curved-2 {
