--- a/frontend/src/components/card/card.module.css
+++ b/frontend/src/components/card/card.module.css
@@ -1,10 +1,10 @@
 .card {
-  @apply relative text-left w-[103px] h-[141px] xl:w-48 xl:h-66;
+  @apply relative text-left w-16 h-20 sm:w-[103px] sm:h-[141px] xl:w-48 xl:h-66;
   @apply rounded-sm xl:rounded-lg bg-white box-content;
 }
 
 .number {
-  @apply block font-courier font-bold text-4xl xl:text-large ml-4 xl:ml-6 mt-4;
+  @apply block font-courier font-bold text-2xl sm:text-4xl xl:text-large ml-2 sm:ml-4 xl:ml-6 mt-2 sm:mt-4;
 }
 
 .symbol {
